[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/font_main_menu_buttons.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/font_dialog.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Audio/ui_click.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/ui_click_light.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Fonts/font_bebas_75.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Fonts/font_dialog_title.tres" type="DynamicFont" id=7]
[ext_resource path="res://UI/style_button.tres" type="StyleBox" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0862745, 0.172549, 0.290196, 1 )
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1080 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1080 ) ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1080.0
margin_bottom = -1080.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.129412 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 300
custom_constants/margin_left = 300
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 300.0
margin_right = 1620.0
margin_bottom = 1080.0
color = Color( 0.0627451, 0.121569, 0.196078, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -414.0
margin_right = 460.0
margin_bottom = 414.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator7" type="HSeparator" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_right = 920.0
margin_bottom = 20.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 20

[node name="Label2" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 24.0
margin_right = 920.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.976471, 0.380392, 0.286275, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "PAUSED"
valign = 1

[node name="HSeparator6" type="HSeparator" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 99.0
margin_right = 920.0
margin_bottom = 179.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 80

[node name="Label5" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 183.0
margin_right = 920.0
margin_bottom = 202.0
custom_fonts/font = ExtResource( 7 )
text = "Controls:"
valign = 1

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 206.0
margin_right = 920.0
margin_bottom = 266.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 60

[node name="Label3" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 270.0
margin_right = 920.0
margin_bottom = 391.0
custom_fonts/font = ExtResource( 3 )
text = "- WASD or Arrow Keys to move 
- Mouse to look around
- Left mouse click to perform special ability
- Right mouse click to change form"
valign = 1

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 395.0
margin_right = 920.0
margin_bottom = 475.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 80

[node name="MouseSensitivityLabel" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 479.0
margin_right = 920.0
margin_bottom = 498.0
custom_fonts/font = ExtResource( 7 )
text = "Mouse Sensitivity: -"
valign = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 502.0
margin_right = 920.0
margin_bottom = 562.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 60

[node name="MouseSensitivitySlider" type="HSlider" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 566.0
margin_right = 920.0
margin_bottom = 582.0
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area = SubResource( 2 )
min_value = 1.0
value = 50.0
rounded = true

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 586.0
margin_right = 920.0
margin_bottom = 726.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 140

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ColorRect/VBoxContainer"]
margin_top = 730.0
margin_right = 920.0
margin_bottom = 790.0
custom_constants/separation = 100
alignment = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 346.0
margin_bottom = 60.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.976471, 0.380392, 0.286275, 1 )
text = "Continue"
flat = true
align = 0

[node name="QuitButton" type="Button" parent="MarginContainer/ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 446.0
margin_right = 815.0
margin_bottom = 60.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.976471, 0.380392, 0.286275, 1 )
text = "Quit to Menu"
flat = true
align = 0

[node name="SlideAnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in = SubResource( 4 )
anims/slide_out = SubResource( 5 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "UISound"

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "UISound"
[connection signal="value_changed" from="MarginContainer/ColorRect/VBoxContainer/MouseSensitivitySlider" to="." method="_on_MouseSensitivitySlider_value_changed"]
[connection signal="mouse_entered" from="MarginContainer/ColorRect/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_mouse_entered"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="mouse_entered" from="MarginContainer/ColorRect/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
